@@ -1,3 +1,5 @@
+/*	$NetBSD: COPYING,v 1.2 2001/05/17 20:42:08 fredette Exp $	*/
+
 /*
  * Copyright (c) 2001 Matthew Fredette.  All rights reserved.
  *
