@@ -1,3 +1,5 @@
+#	$NetBSD: ChangeLog,v 1.2 2001/05/17 20:42:08 fredette Exp $
+
 Tue May 15 14:43:24 2001  Matthew Fredette  <fredette@alum.mit.edu>
 
 	* Release 0.2 out.
